--- a/views/tradesNEW.html
+++ b/views/tradesNEW.html
@@ -155,7 +155,71 @@
             {{/each}}
           {{/if}}
         </div>
-        <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">...</div>
+        <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">
+          {{#if pastTradesExists}}
+            {{#each pastTradeData}}
+              <div class="container-fluid d-flex flex-start justify-content-center">
+                <div class="card justify-content-center" style="max-width: 18rem; min-width:8rem; margin:1rem;">
+                  <img src="{{this.sendItemMediaLink}}" class="card-img-top" alt="..." style="max-width: 18rem; min-width:8rem;">
+                  <div class="card-body card shadow d-flex justify-content-center">
+                    <h3 class="card-title mb-2 mt-2 text-center" style="margin:auto;">{{this.sendItemName}}</h3>
+                    <h5 class="card-title mb-2 mt-2" style="margin:auto; font-size: 1.2rem; font-weight: 400;">Collection: {{this.sendCollectionName}}</h5>
+                    <div class="accordion-item mt-2" style="margin:auto; width: 85%;">
+                      <h2 class="accordion-header text-center" id="flush-heading{{this.sendItemID}}">
+                        <button class="accordion-button collapsed p-2" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapse{{this.sendItemID}}" aria-expanded="false" aria-controls="flush-collapseOne">
+                          More Info
+                        </button>
+                      </h2>
+                      <div id="flush-collapse{{this.sendItemID}}" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+                        <h4 class="card-text mt-2 mb-2 text-center" style="margin:auto; font-size: 1.1rem; font-weight: 400;">Released {{this.sendItemMintDate}}</h4>
+                        <h4 class="card-text mt-2 mb-2 text-center" style="margin:auto; font-size: 1.1rem; font-weight: 400;">ID: {{this.sendItemID}}</h4>  
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="card justify-content-center" style="max-width: 18rem; min-width:8rem; margin:1rem;">
+                  <img src="{{this.receiveItemMediaLink}}" class="card-img-top" alt="..." style="max-width: 18rem; min-width:8rem;">
+                  <div class="card-body card shadow d-flex justify-content-center">
+                    <h3 class="card-title mb-2 mt-2 text-center" style="margin:auto;">{{this.receiveItemName}}</h3>
+                    <h5 class="card-title mb-2 mt-2" style="margin:auto; font-size: 1.2rem; font-weight: 400;">Collection: {{this.receiveCollectionName}}</h5>
+                    <div class="accordion-item mt-2" style="margin:auto; width: 85%;">
+                      <h2 class="accordion-header text-center" id="flush-heading{{this.receiveItemID}}">
+                        <button class="accordion-button collapsed p-2" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapse{{this.receiveItemID}}" aria-expanded="false" aria-controls="flush-collapseOne">
+                          More Info
+                        </button>
+                      </h2>
+                      <div id="flush-collapse{{this.receiveItemID}}" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+                        <h4 class="card-text mt-2 mb-2 text-center" style="margin:auto; font-size: 1.1rem; font-weight: 400;">Released {{this.receiveItemMintDate}}</h4>
+                        <h4 class="card-text mt-2 mb-2 text-center" style="margin:auto; font-size: 1.1rem; font-weight: 400;">ID: {{this.receiveItemID}}</h4>  
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="card justify-content-center" style="max-width: 18rem; min-width:8rem; margin:1rem;">
+                  <img src="/source/images/scrollIcon.png" class="card-img-top" alt="..." style="max-width: 18rem; min-width:8rem;">
+                  <div class="card-body card shadow d-flex justify-content-center">
+                    <h3 class="card-title mb-2 mt-2" style="margin:auto;">Trade Info</h3>
+                    <h5 class="card-title mb-2 mt-2 text-center" style="margin:auto; font-size: 1.2rem; font-weight: 400;">
+                      Sent from {{this.sendUserUsername}}
+                      <br>
+                      Sent to {{this.receiveUserUsername}}
+                    </h5>
+                    <div class="accordion-item mt-2" style="margin:auto; width: 85%;">
+                      <h2 class="accordion-header text-center" id="flush-heading{{this.tradeID}}">
+                        <button class="accordion-button collapsed p-2" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapse{{this.tradeID}}" aria-expanded="false" aria-controls="flush-collapseOne">
+                          More Info
+                        </button>
+                      </h2>
+                      <div id="flush-collapse{{this.tradeID}}" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+                        <h4 class="card-text mt-2 mb-2 text-center" style="margin:auto; font-size: 1.1rem; font-weight: 400;">Trade #ID {{this.tradeID}}</h4>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            {{/each}}
+          {{/if}}
+        </div>
       </div>
     </div>
   </body>
